2009-01-14  Anders Carlsson  <andersca@apple.com>

        Reviewed by Sam Weinig.

        Implement InvokeDefault, Construct, GetProperty and SetProperty.
        
        Fully implement marshalValue.
        
        * Plugins/Hosted/NetscapePluginHostProxy.mm:
        (WKPCInvokeDefault):
        (WKPCConstruct):
        (WKPCGetProperty):
        (WKPCSetProperty):
        * Plugins/Hosted/NetscapePluginInstanceProxy.h:
        * Plugins/Hosted/NetscapePluginInstanceProxy.mm:
        (WebKit::NetscapePluginInstanceProxy::evaluate):
        (WebKit::NetscapePluginInstanceProxy::invoke):
        (WebKit::NetscapePluginInstanceProxy::invokeDefault):
        (WebKit::NetscapePluginInstanceProxy::construct):
        (WebKit::NetscapePluginInstanceProxy::getProperty):
        (WebKit::NetscapePluginInstanceProxy::setProperty):
        (WebKit::NetscapePluginInstanceProxy::marshalValue):
        (WebKit::NetscapePluginInstanceProxy::demarshalValue):
        * Plugins/Hosted/WebKitPluginClient.defs:

2009-01-14  Anders Carlsson  <andersca@apple.com>

        Reviewed by Sam Weinig.

        Demarshal arguments and pass them to the JS call.
        
        * Plugins/Hosted/NetscapePluginHostProxy.mm:
        (WKPCInvoke):
        * Plugins/Hosted/NetscapePluginInstanceProxy.h:
        * Plugins/Hosted/NetscapePluginInstanceProxy.mm:
        (WebKit::NetscapePluginInstanceProxy::invoke):
        (WebKit::NetscapePluginInstanceProxy::demarshalValueFromArray):
        (WebKit::NetscapePluginInstanceProxy::demarshalValues):

2009-01-14  Mark Rowe  <mrowe@apple.com>

        Reviewed by Timothy Hatcher.

        <rdar://problem/6496520> REGRESSION: In Mail, a crash occurs when attempting to display a mail message

        Move WebArchive and WebResource to use the same approach for initializing themselves on the main thread
        that WebView uses.

        * WebView/WebArchive.mm: